# nx_vision

./: .gitignore  CMakeLists.txt  README.md
apps/calibration_studio/: main.cpp
apps/camera_smoke/: main.cpp
apps/debug_studio/: main.cpp
apps/replay_viewer/: main.cpp
apps/runtime/: main.cpp
apps/task_runner/: main.cpp
config/: app.yaml  camera_intrinsics.yaml  control.yaml  debug_view.yaml  depth.yaml  laser_extrinsic.yaml  serial.yaml  target_geometry.yaml  task_profiles.yaml  vision_params.yaml
data/: README.md
debug_view/layouts/: laser_focus.yaml  overview_2x2.yaml  pnp_focus.yaml  task_monitor.yaml
debug_view/panels/: README.md
docs/: calibration.md  coordinate_frames.md  debug_studio.md  protocol.md  topic_summary.md  yuntai_integration.md
include/camera/: orbbec_camera.hpp
include/comm/: gimbal_link.hpp  gimbal_protocol.hpp  serial_port.hpp  time_sync.hpp  v4_protocol.hpp
include/common/: app_context.hpp  config.hpp  types.hpp
include/control/: world_controller.hpp
include/debug_view/: overlay_drawer.hpp  panel_layout.hpp  visual_debugger.hpp
include/pipeline/: aim_pipeline.hpp
include/pose/: angle_projector.hpp  depth_estimator.hpp  laser_compensator.hpp  pnp_solver.hpp
include/tasks/: task_base.hpp
include/vision/: laser_detector.hpp  preprocess.hpp  rectangle_detector.hpp  target_tracker.hpp
scripts/: build_release.sh  install_deps_jetson.sh  install_orbbec_udev_rules.sh  run_debug_studio.sh  run_runtime.sh  setup_serial_permission.sh
src/camera/: orbbec_camera.cpp
src/comm/: gimbal_link.cpp  gimbal_protocol.cpp  serial_port.cpp  time_sync.cpp  v4_protocol.cpp
src/common/: app_context.cpp  config.cpp
src/control/: world_controller.cpp
src/debug_view/: overlay_drawer.cpp  panel_layout.cpp  visual_debugger.cpp
src/pipeline/: aim_pipeline.cpp
src/pose/: angle_projector.cpp  depth_estimator.cpp  laser_compensator.cpp  pnp_solver.cpp
src/tasks/: adv_circle_sync.cpp  task_base.cpp
src/vision/: laser_detector.cpp  preprocess.cpp  rectangle_detector.cpp  target_tracker.cpp
tests/: test_depth_estimator.cpp  test_gimbal_protocol.cpp  test_laser_compensator.cpp  test_pnp_solver.cpp  test_rectangle_detector.cpp  test_task_state_machine.cpp  test_v4_control.cpp
tools/: README.md  fit_gimbal_feedforward.py  validate_camera_imu_extrinsic.py
